# advent-of-code

./: .gitignore  README.md  activate_venv.sh  pyproject.toml  requirements.txt  setup_workspace.sh
src/: day1.py  day2.py  day3.py  day4.py  demo.py  runaoc.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py
